--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        productFlavors {
+            free {
+                applicationIdSuffix ".free"
+            }
+            paid {
+                applicationIdSuffix ".paid"
+            }
+        }
     }
 }
 
@@ -26,7 +34,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':jokeSupplierLib')
-    compile project(':jokeDisplayLib')
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
+    compile project(path: ':backend', configuration: 'android-endpoints')
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    freeCompile 'com.google.android.gms:play-services-ads:11.0.2'
+    compile project(path: ':jokeDisplayLib')
 }
